{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 73,
  "lineage": "cb1aa5cf-8532-22b7-f374-83de18647f36",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-025c86ac05d9af54a",
            "public_dns": "ec2-54-220-109-170.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.220.109.170",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b3d64292df75b0eb",
            "arn": "arn:aws:ec2:eu-west-1:216849691610:instance/i-00f0130292b63644c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f0130292b63644c",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "nm-slalom-lab-ireland",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0a76846d078768d47",
            "private_dns": "ip-172-16-16-103.eu-west-1.compute.internal",
            "private_ip": "172.16.16.103",
            "public_dns": "ec2-34-252-141-220.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.252.141.220",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-1:216849691610:key/4e02c36a-2b0c-4a3a-876c-ac4f9919f3f6",
                "volume_id": "vol-097589579448754d8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eee59cb72e50501a",
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "bastion-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a282d3b6fd0db1a9"
            ]
          },
          "dependencies": [
            "aws_security_group.bastion_access",
            "aws_subnet.dmz-01",
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216849691610:internet-gateway/igw-01a93d8298a4a99a8",
            "id": "igw-01a93d8298a4a99a8",
            "owner_id": "216849691610",
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "main-igw-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            },
            "vpc_id": "vpc-00eec016cd403daee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "core_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-025c86ac05d9af54a",
            "id": "nat-0bff19f702ca62b2b",
            "network_interface_id": "eni-0267210d345e75681",
            "private_ip": "172.16.16.54",
            "public_ip": "54.220.109.170",
            "subnet_id": "subnet-0bb0e8b5e0dd3e172",
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "nat-gw-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_subnet.public-01",
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05ba5b8582a10de7f",
            "owner_id": "216849691610",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0bff19f702ca62b2b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "private-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            },
            "vpc_id": "vpc-00eec016cd403daee"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.core_nat",
            "aws_subnet.public-01",
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b9a544274684c242",
            "owner_id": "216849691610",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01a93d8298a4a99a8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "public-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            },
            "vpc_id": "vpc-00eec016cd403daee"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_dmz_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0724049a426b15e16",
            "route_table_id": "rtb-0b9a544274684c242",
            "subnet_id": "subnet-0eee59cb72e50501a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.dmz-01",
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_dmz_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4ccdb1562132b9e",
            "route_table_id": "rtb-0b9a544274684c242",
            "subnet_id": "subnet-0ac38d24d4fe49300"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.dmz-02",
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_private_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d799caec96ccf49c",
            "route_table_id": "rtb-05ba5b8582a10de7f",
            "subnet_id": "subnet-0f41a004c46393ba1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.core_nat",
            "aws_route_table.private",
            "aws_subnet.private-01",
            "aws_subnet.public-01",
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_private_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1c26997939f3efe",
            "route_table_id": "rtb-05ba5b8582a10de7f",
            "subnet_id": "subnet-0e63ab5b16f4fa134"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.core_nat",
            "aws_route_table.private",
            "aws_subnet.private-02",
            "aws_subnet.public-01",
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc5a9dc523b40ab5",
            "route_table_id": "rtb-0b9a544274684c242",
            "subnet_id": "subnet-0bb0e8b5e0dd3e172"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public-01",
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_public_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0069ebdb1abd08f32",
            "route_table_id": "rtb-0b9a544274684c242",
            "subnet_id": "subnet-094a1cf2d0effc3c1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public-02",
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216849691610:security-group/sg-0a282d3b6fd0db1a9",
            "description": "Allows SSH to Bastion from known source IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a282d3b6fd0db1a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "212.102.52.1/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_access",
            "name_prefix": "",
            "owner_id": "216849691610",
            "revoke_rules_on_delete": false,
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "bastion-access-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            },
            "timeouts": null,
            "vpc_id": "vpc-00eec016cd403daee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz-01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216849691610:subnet/subnet-0eee59cb72e50501a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.16.96/28",
            "id": "subnet-0eee59cb72e50501a",
            "map_public_ip_on_launch": true,
            "owner_id": "216849691610",
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "public-01-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            },
            "vpc_id": "vpc-00eec016cd403daee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz-02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216849691610:subnet/subnet-0ac38d24d4fe49300",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.16.112/28",
            "id": "subnet-0ac38d24d4fe49300",
            "map_public_ip_on_launch": true,
            "owner_id": "216849691610",
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "public-01-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            },
            "vpc_id": "vpc-00eec016cd403daee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216849691610:subnet/subnet-0f41a004c46393ba1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.16.0/28",
            "id": "subnet-0f41a004c46393ba1",
            "map_public_ip_on_launch": false,
            "owner_id": "216849691610",
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "private-01-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            },
            "vpc_id": "vpc-00eec016cd403daee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216849691610:subnet/subnet-0e63ab5b16f4fa134",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.16.16/28",
            "id": "subnet-0e63ab5b16f4fa134",
            "map_public_ip_on_launch": false,
            "owner_id": "216849691610",
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "private-02-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            },
            "vpc_id": "vpc-00eec016cd403daee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-01",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216849691610:subnet/subnet-0bb0e8b5e0dd3e172",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.16.48/28",
            "id": "subnet-0bb0e8b5e0dd3e172",
            "map_public_ip_on_launch": true,
            "owner_id": "216849691610",
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "public-01-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            },
            "vpc_id": "vpc-00eec016cd403daee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-02",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216849691610:subnet/subnet-094a1cf2d0effc3c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.16.64/28",
            "id": "subnet-094a1cf2d0effc3c1",
            "map_public_ip_on_launch": true,
            "owner_id": "216849691610",
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "public-01-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            },
            "vpc_id": "vpc-00eec016cd403daee"
          },
          "dependencies": [
            "module.vpc.aws_vpc.scope"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "scope",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:216849691610:vpc/vpc-00eec016cd403daee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.16.0/24",
            "default_network_acl_id": "acl-02855daaa7eaaf47c",
            "default_route_table_id": "rtb-05143ac1e67ac92e6",
            "default_security_group_id": "sg-08430438d48d0ae44",
            "dhcp_options_id": "dopt-d24e2db6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00eec016cd403daee",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05143ac1e67ac92e6",
            "owner_id": "216849691610",
            "tags": {
              "Business Unit": "D\u0026I",
              "Cost Centre": "tbc-123",
              "Creator": "Terraform via CD pipeline",
              "Environment": "dev",
              "Major Function": "SERL",
              "Name": "vpc-dev",
              "Project": "maxbill",
              "Project Environment": "dev",
              "Service": "maxbill",
              "Service Level": "Bronze",
              "Work Order": "tbc-123"
            }
          }
        }
      ]
    }
  ]
}